# modbus-codec

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
apps/: modbus_cli.cpp
include/modbus/: modbus.hpp
src/: modbus.cpp
tests/: modbus_tests.cpp
